--- a/src/fluentbit/conf/fluentbit.conf
+++ b/src/fluentbit/conf/fluentbit.conf
@@ -17,5 +17,6 @@
     Match           logs
     Host            ${ELASTIC_SEARCH_HOST}
     Port            ${ELASTIC_SEARCH_PORT}
+    Logstash_Format On
     Index           logs
     Type            logs
