--- a/src/fluentbit/conf/fluentbit.conf
+++ b/src/fluentbit/conf/fluentbit.conf
@@ -17,6 +17,8 @@
     Match           logs
     Host            ${ELASTIC_SEARCH_HOST}
     Port            ${ELASTIC_SEARCH_PORT}
+    HTTP_User       ${ELASTIC_USERNMAE}
+    HTTP_Passwd     ${ELASTIC_PASSWORD}
     Logstash_Format On
     Index           logs
     Type            logs
