--- a/docker/docker-cloud.yaml
+++ b/docker/docker-cloud.yaml
@@ -31,6 +31,7 @@ services:
       - elasticsearch
     networks:
       - exlinetr_infrustructure_logging_network
+      - traefik_network
 
   elasticsearch:
     image: elasticsearch:7.6.2
